create game structure html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <script src="assets/js/script.js" defer></script>
 </head>
 <body>
-    
+    <h1>Retro Snake Game</h1>
+    <div>
+        <div class="scores">
+            <h2 id="score">000</h2>
+            <h2 id="highScore">000</h2>
+        </div>
+        <div class="game-border-1">
+            <div class="game-border-2">
+                <div class="game-border-3">
+                    <div id="game-board"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <h2 id="instruction-txt">Press spacebar to start the game</h2>
+    <img src="assets/images/snake-game-logo.png" alt="snake logo">
 </body>
 </html>
