style game board layout

--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <title>Retro Snake Game</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <script src="assets/js/script.js" defer></script>
 </head>
 <body>
-    <h1>Retro Snake Game</h1>
+    <!-- <h1>Retro Snake Game</h1> -->
     <div>
         <div class="scores">
             <h2 id="score">000</h2>
@@ -22,7 +27,7 @@
             </div>
         </div>
     </div>
-    <h2 id="instruction-txt">Press spacebar to start the game</h2>
-    <img src="assets/images/snake-game-logo.png" alt="snake logo">
+    <!-- <h2 id="instruction-txt">Press spacebar to start the game</h2>
+    <img src="assets/images/snake-game-logo.png" alt="snake logo"> -->
 </body>
 </html>
