--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
     </div>
-    <!-- <h2 id="instruction-txt">Press spacebar to start the game</h2>
-    <img id="logo" src="assets/images/snake-game-logo.png" alt="snake logo"> -->
+    <h2 id="instruction-txt">Press spacebar to start the game</h2>
+    <img id="logo" src="assets/images/snake-game-logo.png" alt="snake logo">
 </body>
 </html>
